# WifiLocation-using-Signal-strenghts-Personal-project

./: CMakeLists.txt  Controller.cpp  Controller.h  Dataset.cpp  Dataset.h  MatchingAlgorithm.cpp  MatchingAlgorithm.h  Model.h  README.md  View.h  main.cpp  model.cpp  view.cpp
CalibratedRooms/: J103  J105  J109  J113  J205
